overlays/prod/ingress.yaml
# overlays/dev/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: microservice-ingress
  namespace: prod
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
    - host: a8a6d648e7dc9411c8e123214b12a195-871065733.us-east-1.elb.amazonaws.com
      http:
        paths:
          - path: /prod/adservice
            pathType: Prefix
            backend:
              service:
                name: adservice
                port:
                  number: 9555
          - path: /prod/cartservice
            pathType: Prefix
            backend:
              service:
                name: cartservice
                port:
                  number: 7070
          - path: /prod/checkoutservice
            pathType: Prefix
            backend:
              service:
                name: checkoutservice
                port:
                  number: 5050
          - path: /prod/currencyservice
            pathType: Prefix
            backend:
              service:
                name: currencyservice
                port:
                  number: 7000
          - path: /prod/emailservice
            pathType: Prefix
            backend:
              service:
                name: emailservice
                port:
                  number: 5000
          - path: /prod/frontend
            pathType: Prefix
            backend:
              service:
                name: frontend
                port:
                  number: 8080
          - path: /prod/paymentservice
            pathType: Prefix
            backend:
              service:
                name: paymentservice
                port:
                  number: 50051
          - path: /prod/productcatalogueservice
            pathType: Prefix
            backend:
              service:
                name: productcatalogueservice
                port:
                  number: 3550
          - path: /prod/recommendationservice
            pathType: Prefix
            backend:
              service:
                name: recommendationservice
                port:
                  number: 8080
          - path: /prod/redis-cart
            pathType: Prefix
            backend:
              service:
                name: redis-cart
                port:
                  number: 6379
          - path: /prod/shippingservice
            pathType: Prefix
            backend:
              service:
                name: shippingservice
                port:
                  number: 50051
